CheckStyle+PMD fix all files v2